# cleave

./: .config.include.mk  .gitignore  .pre-commit-config.yaml  Containerfile  Containerfile.test  LICENSE  Makefile  README.md  pyproject.toml
.github/: ci.include.mk  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
src/chapter_mp3s/: __init__.py  chapters.py  cli.py  converter.py  metadata.py
src/cleave/: __init__.py  chapters.py  cli.py  converter.py  metadata.py
tests/: conftest.py  test_chapters.py  test_converter.py  test_metadata.py
tests/integration/: conftest.py  test_cli.py  test_converter.py
tests/unit/: test_chapters.py  test_cli.py  test_converter.py  test_metadata.py
