[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chapter-mp3s"
dynamic = ["version"]
description = "Split m4b audiobooks into per-chapter audio files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "click>=8.1",
    "mutagen>=1.47",
    "rich>=13.0",
]

[project.scripts]
chapter-mp3s = "chapter_mp3s.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
]

[tool.hatch.version]
path = "src/chapter_mp3s/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chapter_mp3s"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires ffmpeg to be installed on PATH",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]
